--- a/app-dn/index.html
+++ b/app-dn/index.html
@@ -13,7 +13,7 @@
     <div class="cart__head">
       <div class="cart__non">'</div>
       <div class="cart__title">Shopping bag</div>
-      <div class="cart__exit"><img src="img/Group 9.svg" alt=""></div>
+      <div class="cart__exit"><img src="img/Group9.svg" alt=""></div>
     </div>
     <div class="cart__items">
       <div class="cart__item">
@@ -26,7 +26,7 @@
           <div class="cart__item-prices">
             <div class="cart__price">
               <div class="quantity">
-                <input class="don1" type="number" min="0" max="100" step="7" value="0" class="quantity-num">
+                <input class="don1 quantity-num" type="number" min="0" max="100" step="7" value="0">
                 <span>$</span>
               </div>
             </div>
@@ -148,9 +148,9 @@
         </div>
       </div>
       <div class="header__orders">
-        <a href="tel:8 800 925-57-89" class="header__orders-phone"><span class="header__orders-phone-span" ><i class="fas fa-phone"></i></span>8 800 925-57-89</a>
+        <a href="tel:88009255789" class="header__orders-phone"><span class="header__orders-phone-span" ><i class="fas fa-phone"></i></span>8 800 925-57-89</a>
         <a href="" class="header__orders-req">Request a call </a>
-        <div href="" class="header__orders-cart"><span class="header__orders-cart-span"><i class="fas fa-shopping-cart"></i></span></div>
+        <div  class="header__orders-cart"><span class="header__orders-cart-span"><i class="fas fa-shopping-cart"></i></span></div>
       </div>
     </div>
   </header>
@@ -168,16 +168,16 @@
     </div>
     <div class="container">
       <div class="head__inner">
-        <div class="head__title title">Donuts  </div>
-        <div class="head__text">
+        <h2 class="head__title title">Donuts  </h2>
+        <p class="head__text">
           Original american 
           stuffed donuts!
-        </div>
-        <div class="head__subtext">
+        </p>
+        <p class="head__subtext">
           Every shape, any size and irresistibly delicious—
           each bite will brighten your day.
-        </div>
-        <div class="head__btn">Go to menu</div>
+        </p>
+        <p class="head__btn">Go to menu</p>
         <div class="head__social-phone">
           <a href="" class="head__social-link  head__social-link-phone">
             <i class="fab fa-instagram"></i>
@@ -200,36 +200,36 @@
         <div class="features__items">
           <div class="features__item">
             <div class="features__info">
-              <div class="features__info-title">
+              <h2 class="features__info-title">
                 Beautiful and Unique
-              </div>
-              <div class="features__info-text">
+              </h2>
+              <p class="features__info-text">
                 Enjoy the beauty and taste of your favorite donut. 
                 feel the uniqueness of <span>Don Don</span>
-              </div>
+              </p>
             </div>
             <img  class="features__img" src="img/features-1.jpg" alt="">
           </div>
           <div class="features__item">
             <img  class="features__img features__img-2" src="img/features-2.jpg" alt="">
             <div class="features__info features__info-2">
-              <div class="features__info-title">
+              <h6 class="features__info-title">
                 Large Assortment
-              </div>
-              <div class="features__info-text">
+              </h6>
+              <p class="features__info-text">
                 Choose from 15 types of mold and 12 types of sprinkles
-              </div>
+              </p>
             </div>
           </div>
           <div class="features__item">
             <div class="features__info">
-              <div class="features__info-title">
+              <h2 class="features__info-title">
                 Fast Delivery
-              </div>
-              <div class="features__info-text">
+              </h2>
+              <p class="features__info-text">
                 Our couriers will deliver the order as soon 
                 as possible to any place
-              </div>
+              </p>
             </div>
             <img  class="features__img" src="img/features-3.jpg" alt="">
           </div>
@@ -239,69 +239,67 @@
   </section>
   <section class="slider">
     <div class="container">
-      <img class="slider__arrow1" href="">
-      <img class="slider__arrow2" href="">
       <div class="slider__inner">
         <div class="slider__texts-inner">
-          <div class="slider__title title">Fill your donut box!</div>
-          <div class="slider__text">
+          <h2 class="slider__title title">Fill your donut box!</h2>
+          <p class="slider__text">
             You can choose any donut - we will pack
             and deliver to you   
-          </div>
+          </p>
         </div>
         <div class="slider__items">
           <div class="slider__item" style="background-image: url(img/Thesecond.png);">
-            <div class="slider__type">Strawberry</div>
-            <div class="slider__price">5$</div>
-            <button class="slider__btn">Add to box</button>
+            <h5 class="slider__type">Strawberry</h5>
+            <p class="slider__price">5$</p>
+            <a href="#" class="slider__btn" >Add to box</a>
           </div>
           <div class="slider__item" style="background-image: url(img/Thefourth.png);">
-            <div class="slider__type">Chocolate</div>
-            <div class="slider__price">7$</div>
-            <button class="slider__btn">Add to box</button>
+            <h5 class="slider__type">Chocolate</h5>
+            <p class="slider__price">7$</p>
+            <a href="#" class="slider__btn" >Add to box</a>
           </div>
           <div class="slider__item" style="background-image: url(img/TheSeventh.png);">
-            <div class="slider__type">Rainbow</div>
-            <div class="slider__price">5$</div>
-            <button class="slider__btn">Add to box</button>
+            <h5 class="slider__type">Rainbow</h5>
+            <p class="slider__price">5$</p>
+            <a href="#" class="slider__btn" >Add to box</a>
           </div>
           <div class="slider__item" style="background-image: url(img/Thesecond.png);">
-            <div class="slider__type">Strawberry</div>
-            <div class="slider__price">5$</div>
-            <button class="slider__btn">Add to box</button>
+            <h5 class="slider__type">Strawberry</h5>
+            <p class="slider__price">5$</p>
+            <a href="#" class="slider__btn" >Add to box</a>
           </div>
           <div class="slider__item" style="background-image: url(img/Thefourth.png);">
-            <div class="slider__type">Chocolate</div>
-            <div class="slider__price">7$</div>
-            <button class="slider__btn">Add to box</button>
+            <h5 class="slider__type">Chocolate</h5>
+            <p class="slider__price">7$</p>
+            <a href="#" class="slider__btn" >Add to box</a>
           </div>
           <div class="slider__item" style="background-image: url(img/TheSeventh.png);">
-            <div class="slider__type">Rainbow</div>
-            <div class="slider__price">5$</div>
-            <button class="slider__btn">Add to box</button>
+            <h5 class="slider__type">Rainbow</h5>
+            <p class="slider__price">5$</p>
+            <a href="#" class="slider__btn" >Add to box</a>
           </div>
         </div>
-        <div class="slider__btn-big">Buy now</div>
+        <a href="#" class="slider__btn-big">Buy now</a>
       </div>
     </div>
   </section>
   <section class="history">
     <div class="container">
-      <div class="history__title title">Company History</div>
+      <h2 class="history__title title">Company History</h2>
       <div class="history__inner">
         <div class="history__texts">
-          <div class="history__text"><span>Don Don </span>then we make donuts from natural ingredients using
+          <p class="history__text"><span>Don Don </span>then we make donuts from natural ingredients using
             the original American technology, without the use of freezing.
-            </div>
-          <div class="history__subtext">
+            </p>
+          <p class="history__subtext">
             Donuts are not just an excellent dessert, but also a worthy
             treat that can be used as a gift.
-          </div>
-          <div class="history__ad">Feel the taste of real American doughnuts!</div>
+          </p>
+          <p class="history__ad">Feel the taste of real American doughnuts!</p>
         </div>
         <div class="history__images">
-          <img src="img/history-1.png" alt="" class="history__img-1">
-          <img src="img/history-2.png" alt="" class="history__img-2">
+          <img src="img/history-1.png" alt="gg"  class="history__img-1" >
+          <img src="img/history-2.png" alt="gg"  class="history__img-2" >
         </div>
       </div>
     </div>
@@ -324,9 +322,9 @@
           <a href="" class="footer__links-2">FAQ</a>
         </div>
         <div class="footer__contacts">
-          <a href="tel:8 800 925-57-89" class="footer__phone"><span></span>8 800 925-57-89</a>
-          <div class="footer__address"><span></span>Tsvetnoy Blvd, 5, Moscow</div>
-          <a href="mailto: Dondon@gmail.com" class="footer__mail"><span></span> Dondon@gmail.com</a>
+          <a href="tel:88009255789" class="footer__phone" ><span></span>8 800 925-57-89</a>
+          <div class="footer__address" ><span></span>Tsvetnoy Blvd, 5, Moscow</div>
+          <a href="mailto:Dondon@gmail.com" class="footer__mail" ><span></span> Dondon@gmail.com</a>
           <div class="footer__social">
             <span><a href="" class="footer__social-link">
               <i class="fab fa-instagram"></i>
